    * Change the file open mode for the ini file from w to w+ just in case the 
      original open failed but the file did exist
    * Fix configure problem preventing the CHAR encoding from being passed
    * Remove white spave from ini write, not all drivers use unixODBC ini functions 
      and can handle the spaces
    * Update config.guess to current GNU version including support for AIX6


19th-Nov-2008
2.2.14

	* missing protype in 2.2.13 made the build fail on some platforms

18th-Nov-2008
2.2.13

	* There was a mutex around iconv that needed adding. Without this, 
 	  there was a potential thread problem
	* Fix problem with SQLGetDiagRec/Field returning double driver 
	  errors
	* odbctest was using the wrong handle for SQLGetConnectOption
	* remove startup thread race condition
	* fix descriptor memory leak with UNICODE only drivers (thanks Ian)
	* Alter the default 64bit build mode, and change the flag to 
	  BUILD_LEGACY_64_BIT_MODE
	* Fix a couple of 64bit problems
	* create unixodbc_conf.h on install to contain compile settings
	* Allow the GUI parts to build with qt4
	* try and deal with drivers that call internal W functions and 
	  end up in the driver manager (informix for example). Enabled
	  by --enable-handlemap=yes when configuring
	* Fix leak of iconv handles
	* Allow the setup API to call through to the wide driver functions
	* Fix potential seg fault in SQLGetPrivateProfileString
	* Fix a couple of broken casts, and some MS 64bit changes
	* Add check for postgres driver getting into a spin wait
	* Fix logging that reported the setting of env attrs failing
	* Add isql option to wrap strings with quotes
	* Add isql option -3 to make isql use ODBC 3 calls instead of 2
	* Add timestamp to logging output
	* Pull any errors from driver whern SQLBrowseConnect returns SQL_NEED_DATA
	* isql now displays any warnings from SQLMoreResults
	* Add include path to odbc_config --cflags output
	* Fix some SQLLEN/SQLINTEGER conflicts in the cursor lib