@@ -48,6 +48,8 @@
     * Remove white spave from ini write, not all drivers use unixODBC ini functions 
       and can handle the spaces
     * Update config.guess to current GNU version including support for AIX6
+    * Create SVN repository at sourceforge
+    * Add cast to fix problem in SQLSetConnectOption
 
 
 19th-Nov-2008
